--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,13 @@
   "version": 2,
   "functions": {
     "api/*.py": {
-      "runtime": "vercel-python@3.11"
+      "runtime": "@vercel/[email protected]"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "api/myip.py" }
+    {
+      "src": "/(.*)",
+      "dest": "api/myip.py"
+    }
   ]
 }
